@@ -3,4 +3,5 @@ package zollernextras.mobs.entities;
 public interface IShadeEntity {
 	
 	public boolean isShadowBeing();
+	
 }
